# falling-sand

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md  about.hbs  about.toml  flake.nix  result  third-party.html  wasm.js
.cargo/: config.toml
.github/: dependabot.yml  release.yml
.github/workflows/: build-windows.yml  build.yml  check-builds.yml  check.yml  create-release.yml  deploy-to-pages.yml  main.yml  pr.yml  release.yml  test.yml  update-nix-flake.yml
assets/shaders/: grid.wgsl  grid_to_texture.wgsl  margulos.wgsl
src/: active_chunks.rs  checker_board_iterator.rs  chunk.rs  chunk_neighborhood_view.rs  chunk_positions.rs  consts.rs  cursor_world_position.rs  double_buffered.rs  draw_tool.rs  fall.rs  falling_sand.rs  falling_sand_grid.rs  fire.rs  flow.rs  grid.rs  hovering_ui.rs  main.rs  margolus.rs  material.rs  movement.rs  pan_zoom_camera.rs  particle_attributes.rs  particle_grid.rs  process_chunks.rs  react.rs  reactions.rs  render.rs  sparse_grid_iterator.rs  spatial_store.rs  time_control.rs  types.rs  util.rs
src/margolus/: gravity.rs  mod.rs
src/render/: extract.rs
web/: index.html
