[package]
name = "falling-sand"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[target.'cfg(target_arch = "wasm32")'.profile.release]
opt-level = "z"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "wayland",
]

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
enum-map = "2.4.1"
bytemuck = { version = "1.12.3", features = ["derive"] }
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.0"
nix = { version = "0.27.1", features = ["process"] }
half = { version = "2.3.1", features = [
    "bytemuck",
    "serde",
    "num-traits",
    "use-intrinsics",
    "zerocopy",
] }
line_drawing = "1.0.0"
rand = "0.8.5"
