[package]
name = "falling-sand"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[profile.release-debug]
inherits = "release"
debug = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug-assertions = true

[profile.dev-opt.package."*"]
opt-level = 3

[features]
parallel = ["ndarray/rayon"]
webgpu = ["bevy/webgpu"]

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "tonemapping_luts",
  "default_font",
  "wayland",
]

[dev-dependencies]
proptest = "1.4.0"
proptest-state-machine = "0.2.0"

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
enum-map = "2.4.1"
bytemuck = { version = "1.15.0", features = ["derive"] }
# bevy_egui = "0.24.0"
# bevy-inspector-egui = "0.22.0"
nix = { version = "0.28.0", features = ["process"] }
half = { version = "2.4.1", features = [
  "bytemuck",
  "serde",
  "num-traits",
  "use-intrinsics",
  "zerocopy",
] }
line_drawing = "1.0.0"
rand = "0.8.5"
itertools = "0.12.1"
anymap3 = { version = "1.0.0", features = ["hashbrown"] }
paste = "1.0.14"
smallvec = { version = "1.13.1", features = [
  "union",
  "const_generics",
  "const_new",
  "serde",
  "write",
] }
morton-encoding = "2.0.1"
quadtree_rs = "0.1.3"
tracing = "0.1.40"
bitfield = "0.14.0"
wasm-bindgen = "=0.2.91"
